# lab-explorations

./: README.md  app.py  docker-compose.yml  init.sh  pyproject.toml  test-api.sh  test.sh
.claude/: settings.local.json
init/: 02-rls.sql
learn-pgrls/: README.md
learn-pgrls/init/: 01-schema.sql  03-data.sql
learn-pubsub/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
learn-pubsub/scripts/: cleanup.sh  deploy.sh
learn-pubsub/src/: consumer.ts  delayed-consumer.ts  local-delayed-consumer.ts  producer.ts  push-server.ts  subscription-stats.ts
learn-pubsub/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
learn-tigerbeetle/: .gitignore  README.md  docker-compose.yml  jest.config.js  jest.e2e.config.js  package.json  pnpm-lock.yaml
learn-tigerbeetle/src/: index.ts  tigerbeetle-client.ts  wallet-service.ts
learn-tigerbeetle/src/__tests__/: api.e2e.test.ts
